--- a/RecipeApp/index.html
+++ b/RecipeApp/index.html
@@ -335,7 +335,7 @@
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
                         <h2>Watch The Trailer<span class="blue"> and Demo</span></h2>
-                        <a class="btn-solid-lg" href="https://github.com/darco918/Food-Recipe-App" target="_blank"><i class="fab fa-github"></i>Check it out on Github</a>
+                        <a class="btn-solid-lg" href="https://github.com/AndreiDanRata/AndreiDanRata.github.io" target="_blank"><i class="fab fa-github"></i>Check it out on Github</a>
                       
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
